--- a/src/app/student-list/student-list.component.html
+++ b/src/app/student-list/student-list.component.html
@@ -4,7 +4,7 @@
             <h1 class="text-lg font-bold mt-4">La liste des étudiants</h1>
         </div>
 
-        <button class="bg-slate-100 py-2 px-3 my-3 shadow rounded-lg me-3 " type="button" mat-raised-button (click)="openBottomSheet()">Ajouter un
+        <button class="bg-black text-white py-2 px-3 my-3 shadow rounded-lg me-3 " type="button" mat-raised-button (click)="openBottomSheet()">Ajouter un
             étudiant</button>
     </div>
     <div class="mat-elevation-z1 m-5">
