--- a/src/app/student/add-student/add-student.component.html
+++ b/src/app/student/add-student/add-student.component.html
@@ -1,34 +1,34 @@
-<div class="p-5">
-    <form class="">
+<div class="p-5 my-5">
+    <form class=""  [formGroup]="form" (ngSubmit)="enregistrer()">
         <div class="grid grid-cols-12">
             <div class="col-span-2 ">
                 <mat-form-field class="w-full">
-                    <input matInput placeholder="Numero etudiant" class="w-full py-3 ps-3">
+                    <input matInput placeholder="Numero etudiant" [formControlName]="'numero'" class="w-full py-3 ps-3 border border-1 border-gray-300">
                 </mat-form-field>
             </div>
             <div class="col-span-5">
                 <mat-form-field class="w-full" >
-                    <input matInput placeholder="Prénom" class="w-full py-3 ps-3" >
+                    <input matInput placeholder="Prénom" [formControlName]="'prenom'" class="w-full py-3 ps-3 border border-1 border-gray-300" >
                 </mat-form-field>
             </div>
             <div class="col-span-3 ">
                 <mat-form-field class="w-full">
-                    <input matInput placeholder="Nom" class="w-full py-3 ps-3">
+                    <input matInput placeholder="Nom" [formControlName]="'nom'" class="w-full py-3 ps-3 border border-1 border-gray-300">
                 </mat-form-field>
             </div>
             <div class="col-span-2">
                 <mat-form-field class="w-full">
-                    <input matInput placeholder="Classe" class="w-full py-3 ps-3">
+                    <input matInput [formControlName]="'classe'" placeholder="Classe" class="w-full py-3 ps-3 border border-1 border-gray-300">
                 </mat-form-field>
             </div>
         </div>   
         <div class="grid grid-cols-12">
             <div class="col-span-2">
-                <button class="bg-slate-100 py-3 ms-3 px-3 shadow rounded-lg me-3 w-full" type="button" mat-raised-button >Ajouter un
-                    Ajouter 
+                <button class="bg-black text-white py-3 shadow rounded-lg me-3 w-full"  type="submit"  >Ajouter un
+                    étudiant 
                 </button>
             </div>
         </div>
 
-    </form>
+    </form> 
 </div>
