--- a/src/app/student-list/student-list.component.html
+++ b/src/app/student-list/student-list.component.html
@@ -4,7 +4,8 @@
             <h1 class="text-lg font-bold mt-4">La liste des étudiants</h1>
         </div>
 
-        <button class="bg-black text-white py-2 px-3 my-3 shadow rounded-lg me-3 " type="button" mat-raised-button (click)="openBottomSheet()">Ajouter un
+        <button class="bg-black text-white py-2 px-3 my-3 shadow rounded-lg me-3 " type="button" mat-raised-button
+            (click)="openBottomSheet()">Ajouter un
             étudiant</button>
     </div>
     <div class="mat-elevation-z1 m-5">
@@ -13,7 +14,8 @@
             <!-- Position Column -->
             <ng-container matColumnDef="numero">
                 <th mat-header-cell *matHeaderCellDef> N° Etudiant</th>
-                <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
+                <td mat-cell *matCellDef="let element"> <span class="font-bold">{{element.numero}}</span>
+                </td>
             </ng-container>
 
             <!-- Name Column -->
@@ -32,6 +34,13 @@
             <ng-container matColumnDef="classe">
                 <th mat-header-cell *matHeaderCellDef> Classe </th>
                 <td mat-cell *matCellDef="let element"> {{element.classe}} </td>
+            </ng-container>
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> <span class="font-bold">Action</span> </th>
+                <td mat-cell *matCellDef="let element">
+                    <button class="material-icons-outlined text-green-900 me-3">edit</button>
+                    <button class="material-icons-round text-red-700 btn" (click)="remove(element.numero)">delete</button>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
