--- a/src/app/student-list/student-list.component.html
+++ b/src/app/student-list/student-list.component.html
@@ -9,11 +9,11 @@
             étudiant</button>
     </div>
     <div class="flex justify-end">
-        <div class="my-2 ms-4  pe-3 bg-gray-50 me-5 shadow rounded-full">
+        <div class="my-2 ms-4  pe-3 bg-gray-100 me-5 shadow-lg rounded-full">
             <input type="text" placeholder="Recherche" class="w-full py-3 ps-3 border border-1 rounded-full border-gray-300" (click)="recherche($event)">
         </div>
     </div>
-    <div class="mat-elevation-z1 m-5">
+    <div class="mat-elevation-z2 m-5">
         <table mat-table [dataSource]="dataSource">
 
             <!-- Position Column -->
@@ -43,8 +43,8 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> <span class="font-bold">Action</span> </th>
                 <td mat-cell *matCellDef="let element">
-                    <button class="material-icons-outlined text-green-900 bg-green-300 shadow-lg rounded-lg me-3">edit</button>
-                    <button class="material-icons-round text-red-700 bg-red-300 shadow-lg rounded-lg" (click)="remove(element.numero)">delete</button>
+                    <button class="material-icons-outlined text-green-900 bg-green-300 shadow-lg rounded-lg me-3" style="width: 30px; height: 30px;" >edit</button>
+                    <button class="material-icons-round text-red-700 bg-red-300 shadow-lg rounded-lg me-3" style="width: 30px; height: 30px;" (click)="remove(element.numero)">delete</button>
                 </td>
             </ng-container>
 
